Revert "Fixed alert pop up not showing. It has to be imported via CDN tho not sure why"

--- a/src/styles/swal.css
+++ b/src/styles/swal.css
@@ -8,3 +8,7 @@
   background-color: #5f229f;
   border: 1px solid #a984d4;
 }
+
+.swal-modal {
+  width: 300px;
+}
